--- a/css/style.css
+++ b/css/style.css
@@ -2161,7 +2161,8 @@ tbody.collapse.show {
 
 .dropup,
 .dropdown {
-  position: relative; }
+  position: relative; 
+  }
 
 .dropdown-toggle::after {
   display: inline-block;
@@ -6478,7 +6479,11 @@ Navbar
   color: #f8f8f8;
   font-weight: bold;
   padding: 0.5rem 1.2rem !important;
-  font-size: 1.1rem; }
+  font-size: 1rem; }
+  
+.dropdown-item {
+	font-size: 0.9rem;
+}
 
 .navbar-nav .dropdown-item:hover,
 .navbar-nav .dropdown-item:focus,
@@ -6577,7 +6582,7 @@ Sidebar
   border-radius: 0.25rem; }
 
 .sidebar-box-ag {
-  margin: 1rem;
+  margin: 1rem 0;
   background-color: #f0f0f0;
  /* border-radius: 0.25rem; 
   border-bottom: 2px solid #ced1d4 */;}
@@ -6713,3 +6718,6 @@ Better nesting of list groups
 	margin-left:1.57rem;
     width:83%;
 }
+
+
+.titleBar:hover .dropdown-menu{display: block;}
